fix: align + pnpm

--- a/src/components/Caption.module.css
+++ b/src/components/Caption.module.css
@@ -1,3 +1,4 @@
 .status {
     display: inline-block;
+    vertical-align: middle;
 }
